Fix sub-menu item alignment issue.

--- a/yea/css/templatemo_style.css
+++ b/yea/css/templatemo_style.css
@@ -400,7 +400,7 @@ a.toggle-menu {
 }
 
 .main-menu ul li:first-child{
-  margin-left:15px;
+  margin-left:0px;
 }
 
 .menu-responsive ul li a {
